--- a/style.css
+++ b/style.css
@@ -5,3 +5,29 @@
 body{
     background-color: #D9D9D9;
 }
+.container{
+    width: 1200px;
+    height: 150px;
+    background: #0636E2;
+    margin: 0 auto;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+}
+.logo{
+    display: flex;
+    align-items: center;
+}
+.logo img{
+    border-radius: 180px;
+    margin: 12px;
+}
+.logo h4{
+    color: #EDEDED;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
