postar noticia pronto, falta mesnagens

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 .container{
     width: 1200px;
     height: 150px;
-    background: #000;
+    background: #EDEDED;
     margin: 0 auto;
 }
 header{
@@ -68,4 +68,39 @@ nav ul li a:hover{
 }
 main{
     background-color: #D9D9D9;
+}
+.enviar{
+    background-color: white;
+    width: 1200px;
+    height: 160px;
+    margin-top: 10px;
+    display: flex;
+}
+.foto{
+    width: 300px;
+    height: 160px;
+    text-align: center;     
+}
+.msg{
+    width: 900px;
+    height: 160px;
+    display: flex;
+    align-items: center;
+}
+.msg textarea{
+    border-right: 0px;
+    border-style: none;
+    margin: 5px;
+    padding: 10px;
+    font-size: 25px;
+    width: 800px;
+    height: 130px;
+}
+.msg input{
+    border-style: none;
+    border-width: 0px;
+    background-color:#0C489E;
+    color:white;
+    width: 95px;
+    height: 160px;
 }
